problem quality_classifier

--- a/notebooks/quality_extract.ipynb
+++ b/notebooks/quality_extract.ipynb
@@ -102,20 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "id": "118fac22-33df-417f-a297-c4cedc4d6d41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-26T03:11:02.362909Z",
-     "iopub.status.busy": "2024-05-26T03:11:02.362478Z",
-     "iopub.status.idle": "2024-05-26T03:11:02.378932Z",
-     "shell.execute_reply": "2024-05-26T03:11:02.378117Z",
-     "shell.execute_reply.started": "2024-05-26T03:11:02.362874Z"
+     "iopub.execute_input": "2024-05-26T04:30:46.972780Z",
+     "iopub.status.busy": "2024-05-26T04:30:46.972328Z",
+     "iopub.status.idle": "2024-05-26T04:30:46.987697Z",
+     "shell.execute_reply": "2024-05-26T04:30:46.987039Z",
+     "shell.execute_reply.started": "2024-05-26T04:30:46.972746Z"
     }
    },
    "outputs": [],
    "source": [
-    "cc_dir = \"../data/CC-MAIN-2023-50-warc-filtered\""
+    "cc_dir = \"../data/CC-MAIN-2023-50-warc-filtered\"\n",
+    "neg_dir = \"../data/cc_neg\"\n",
+    "Path(neg_dir).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -223,48 +225,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "id": "369f60e7-7ee0-443b-9712-987a71a8798d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-26T04:25:14.738643Z",
-     "iopub.status.busy": "2024-05-26T04:25:14.738174Z",
-     "iopub.status.idle": "2024-05-26T04:25:14.754791Z",
-     "shell.execute_reply": "2024-05-26T04:25:14.754095Z",
-     "shell.execute_reply.started": "2024-05-26T04:25:14.738602Z"
+     "iopub.execute_input": "2024-05-26T04:34:09.585967Z",
+     "iopub.status.busy": "2024-05-26T04:34:09.585521Z",
+     "iopub.status.idle": "2024-05-26T04:34:09.606238Z",
+     "shell.execute_reply": "2024-05-26T04:34:09.605136Z",
+     "shell.execute_reply.started": "2024-05-26T04:34:09.585933Z"
     }
    },
    "outputs": [],
    "source": [
-    "# num_samples = 100_000\n",
-    "# num_warc_files = 100\n",
-    "num_samples = 10\n",
-    "num_warc_files = 1"
+    "num_samples = 100_000\n",
+    "num_warc_files = 100\n",
+    "# num_samples = 10\n",
+    "# num_warc_files = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "id": "39f899f0-0e56-45c2-98e6-3ae4a00b10e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-26T04:25:18.035519Z",
-     "iopub.status.busy": "2024-05-26T04:25:18.035073Z",
-     "iopub.status.idle": "2024-05-26T04:25:31.607303Z",
-     "shell.execute_reply": "2024-05-26T04:25:31.606431Z",
-     "shell.execute_reply.started": "2024-05-26T04:25:18.035484Z"
+     "iopub.execute_input": "2024-05-26T04:34:35.258069Z",
+     "iopub.status.busy": "2024-05-26T04:34:35.257639Z",
+     "iopub.status.idle": "2024-05-26T04:56:29.168938Z",
+     "shell.execute_reply": "2024-05-26T04:56:29.168217Z",
+     "shell.execute_reply.started": "2024-05-26T04:34:35.258034Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e7d1d94928c41668666f63762cf036e",
+       "model_id": "079dea235d024433b7450f784bddde35",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -273,7 +275,6 @@
    ],
    "source": [
     "count = 0\n",
-    "reservoir = [None for _ in range(num_samples)]\n",
     "warc_gz_paths = list(Path(cc_dir).iterdir())\n",
     "warc_gz_paths = warc_gz_paths[:num_warc_files]\n",
     "for warc_gz_path in tqdm(warc_gz_paths):\n",
@@ -291,42 +292,28 @@
     "                r_idx = random.randrange(count)\n",
     "                if r_idx >= num_samples:\n",
     "                    continue\n",
-    "                html_bytes = record.reader.read()\n"
+    "                html_bytes = record.reader.read()\n",
+    "                with open(f\"{neg_dir}/{r_idx}.html\", \"wb\") as out_f:\n",
+    "                    out_f.write(html_bytes)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "72e8f6be-f59a-45cf-8f1d-95aaf41ba2ed",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-26T04:16:58.061402Z",
-     "iopub.status.busy": "2024-05-26T04:16:58.060749Z",
-     "iopub.status.idle": "2024-05-26T04:16:58.076036Z",
-     "shell.execute_reply": "2024-05-26T04:16:58.075539Z",
-     "shell.execute_reply.started": "2024-05-26T04:16:58.061365Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fotografia e progettazione : workshop in giardino hai un ' attività di giardinaggio ? iscriviti login video , notizie , prodotti dal mondo del giardinaggio iscriviti alla newsletter contenutivideo , news , prodotti argomenti prato attrezzature piante e fiori agrofarmaci outdoor formazione mercato verde sportivo tutte le tags eventi piante e fiori prodotti da giardino manutenzione verde giardinaggio macchine da giardino giardini giardinieri formazione eima tutte le tags tipologia video news prodotti eventi vedi tutti ultimi post mai più senza energia ascolta il podcast aiuole allâ€™ombra e al sole nuovo e usato solo annunci per il giardinaggio communityproduttori , negozi e non solo cerca per località lombardia ( 230 ) veneto ( 115 ) emilia romagna ( 85 ) piemonte ( 71 ) toscana ( 63 ) lazio ( 44 ) sicilia ( 34 ) puglia ( 30 ) friuli venezia giulia ( 26 ) marche ( 24 ) campania ( 23 ) estero ( 23 ) trentino alto adige ( 22 ) umbria ( 20 ) liguria ( 19 ) abruzzo ( 16 ) calabria ( 16 ) sardegna ( 16 ) basilicata ( 11 ) molise ( 11 ) cerca i più vicini a te cerca tipologia agenzia agronomo altro azienda centro assistenza consorzio ente / associazione fiere , eventi , servizi florovivaista garden center giardiniere grande distribuzione grossista / distributore gruppo di acquisto marketing / comunicazione manutentore del verde negozio paesaggista del verde rappresentante / agente rivenditore di macchine tutte le tags eventi piante e fiori prodotti da giardino manutenzione verde giardinaggio macchine da giardino giardini giardinieri formazione eima tutte le tags in evidenza copyr spa - insetticidi per orto e giardinocopyr spa pellenc italia srl - macchine manutenzione aree verdipellenc italia srl radio garden - la prima web radio del giardinaggioradio garden contenuti contenuti community cerca progettazione e fotografia : workshop in giardino condividi : formazione 30 - 01 - 2017 all ' interno del radicepura garden festival , la grande kermesse dedicata ai giardini mediterranei che si svolge a giarre , in provincia di catania , ed è in programma per quest ' anno dal 21 aprile al 21 ottobre , sono previsti due workshop dedicati alla fotografia e alla progettazione di giardini . il primo appuntamento è fissato per lunedì 24 aprile con marianne majerus , celebre fotografa di giardini londinese , conosciuta in tutto il mondo . dal 16 al 18 giugno sarà invece un ' altra londinese , sarah eberle , paesaggista , a condurre un workshop dedicato alla progettazione e restauro di giardini mediterranei . durante il festival , che proseguirà fino all ' autunno , verranno allestiti i cinque giardini che hanno vinto il concorso internazionale per giovani paesaggisti e i cinque vincitori tra paesaggisti già affermati . per informazioni si può consultare il sito www . radicepurafestival . com . tags formazione giardini ti potrebbero interessare prato mai più senza energia piante e fiori ascolta il podcast aiuole allâ€™ombra e al sole attrezzature nuovo e usato solo annunci per il giardinaggio attrezzature cippattore semovente su cingolo attrezzature cippatore professionale alte prestazioni piante e fiori dove trovare piante rare e inconsuete attrezzature arieggiatore per trattorino piante e fiori così il giardinaggio fa bene al corpo prato long test tagliaerba a batteria newsletter ricevi una newsletter su misura in base ai tuoi interessi . produttori e negozi gardentv è anche una community di produttori , negozi , servizi . trova i più vicini a te . + hai unâ€™attivitã ? registrati in gardentv . argomenti prato attrezzature piante e fiori agrofarmaci outdoor formazione mercato verde sportivo prodotti e produttori community di gardentv giardinieri , negozi e servizi vicino a te sfoglia i prodotti gardentv chi siamo contattaci dati societari termini e condizioni seguici anche su . . . © copyright 2023 gardentv via aristotele , 54 - 20128 milano - tutti i diritti riservati - p . iva it09441600963 mappa del sito | cookie policy | privacy policy | home ×close elimina membro vuoi davvero eliminare questo membro dallo staff ? annulla si , elimina ×close elimina indirizzo vuoi davvero eliminare questo rivenditore ? annulla si , elimina ×close elimina media sei sicuro di voler eliminare questo media ? annulla si , elimina ×chiudi registrati attenzione : uno o più campi obbligatori non sono stati compilati correttamente ! controlla e compila correttamente i campi evidenziati . nome * cognome * email * username * password * conferma password * interessi * attrezzature prato piante e fiori mercato formazione outdoor protagonisti agrofarmaci voglio iscrivermi alla newsletter e ricevere notizie e aggiornamenti dal mondo del giardinaggio ( no spam ! normative sulla privacy ) accetto normativa sulla privacy e termini e condizioni di utilizzo del sito ho un ' attivita commerciale nel settore del giardinaggio e voglio iscriverla gratis nella community di gardentv sei già registrato ? login invia ×chiudi login email password non sei ancora registrato ? registrati ora . clicca qui ! hai dimenticato la password ? accedi ×chiudi password dimenticata email ti è tornata in mente la password ? login invia ×chiudi contatta questa azienda puoi contattare l ' azienda telefonicamente al numero + 39 02 . 9212345678 oppure inviare un messaggio compilando il modulo : ti risponderà al più presto . nome o ragione sociale email messaggio invia × sei un professionista del verde ? entra nel più grande network del giardinaggio ! sei un giardiniere ? sei un rivenditore ? sei un ' azienda ? iscriviti gratuitamente per creare il tuo profilo , dare visibilità alla tua impresa , entrare in contatto con gli altri utenti , pubblicare i tuoi video e prodotti . registrati ora accedi se sei già iscritto .\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "e982ab88-3423-4206-bcf3-3b60a76b0fb5",
+   "metadata": {},
    "source": [
-    "print(reservoir[2])"
+    "# create fasttext training file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64bf01f2-0300-4a1d-8362-0e56cd9e4d05",
+   "id": "81a042fc-546e-4bfb-9815-d2858a5ffffe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pos_dir = "
+   ]
   }
  ],
  "metadata": {
