update from ampere2

--- a/lb/notebooks/paloma.ipynb
+++ b/lb/notebooks/paloma.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "76251db1-3a33-4ac5-b730-bb1e0c686719",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T04:01:04.748173Z",
-     "iopub.status.busy": "2024-05-27T04:01:04.747692Z",
-     "iopub.status.idle": "2024-05-27T04:01:04.760696Z",
-     "shell.execute_reply": "2024-05-27T04:01:04.760345Z",
-     "shell.execute_reply.started": "2024-05-27T04:01:04.748139Z"
+     "iopub.execute_input": "2024-05-27T21:52:02.683408Z",
+     "iopub.status.busy": "2024-05-27T21:52:02.682936Z",
+     "iopub.status.idle": "2024-05-27T21:52:02.699140Z",
+     "shell.execute_reply": "2024-05-27T21:52:02.698774Z",
+     "shell.execute_reply.started": "2024-05-27T21:52:02.683372Z"
     }
    },
    "outputs": [],
@@ -18,6 +18,7 @@
     "import json\n",
     "import subprocess\n",
     "from pathlib import Path\n",
+    "import random\n",
     "\n",
     "import numpy as np\n",
     "from xopen import xopen"
@@ -37,11 +38,11 @@
    "id": "9afea680-66de-4adb-b21e-9293e66aa418",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:33:05.540677Z",
-     "iopub.status.busy": "2024-05-27T02:33:05.540218Z",
-     "iopub.status.idle": "2024-05-27T02:33:05.552337Z",
-     "shell.execute_reply": "2024-05-27T02:33:05.551916Z",
-     "shell.execute_reply.started": "2024-05-27T02:33:05.540642Z"
+     "iopub.execute_input": "2024-05-27T21:50:58.992316Z",
+     "iopub.status.busy": "2024-05-27T21:50:58.992000Z",
+     "iopub.status.idle": "2024-05-27T21:50:59.003880Z",
+     "shell.execute_reply": "2024-05-27T21:50:59.003530Z",
+     "shell.execute_reply.started": "2024-05-27T21:50:58.992297Z"
     }
    },
    "outputs": [],
@@ -51,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3905122c-7e40-449f-85ee-b8b3a5c239ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:35:48.180644Z",
-     "iopub.status.busy": "2024-05-27T02:35:48.180176Z",
-     "iopub.status.idle": "2024-05-27T02:35:48.193089Z",
-     "shell.execute_reply": "2024-05-27T02:35:48.192614Z",
-     "shell.execute_reply.started": "2024-05-27T02:35:48.180598Z"
+     "iopub.execute_input": "2024-05-27T21:50:59.523706Z",
+     "iopub.status.busy": "2024-05-27T21:50:59.523336Z",
+     "iopub.status.idle": "2024-05-27T21:50:59.534381Z",
+     "shell.execute_reply": "2024-05-27T21:50:59.533972Z",
+     "shell.execute_reply.started": "2024-05-27T21:50:59.523664Z"
     }
    },
    "outputs": [],
@@ -69,21 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "6d542a9f-7a98-4312-936d-7bc7a04c60a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:38:18.154934Z",
-     "iopub.status.busy": "2024-05-27T02:38:18.154486Z",
-     "iopub.status.idle": "2024-05-27T02:38:18.186202Z",
-     "shell.execute_reply": "2024-05-27T02:38:18.185304Z",
-     "shell.execute_reply.started": "2024-05-27T02:38:18.154900Z"
+     "iopub.execute_input": "2024-05-27T21:51:00.092729Z",
+     "iopub.status.busy": "2024-05-27T21:51:00.092332Z",
+     "iopub.status.idle": "2024-05-27T21:51:00.119445Z",
+     "shell.execute_reply": "2024-05-27T21:51:00.118915Z",
+     "shell.execute_reply.started": "2024-05-27T21:51:00.092689Z"
     }
    },
    "outputs": [],
    "source": [
     "obj_list = []\n",
-    "with xopen(paloma_files[0], \"r\") as in_file:\n",
+    "with xopen(\"../scratch/paloma_c4_100_domains_val/val_34_github.com.jsonl.gz\", \"r\") as in_file:\n",
     "    for line in in_file:\n",
     "        obj = json.loads(line)\n",
     "        obj_list.append(obj)"
@@ -91,33 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "aa8222c5-bd3c-4893-a716-5602c2d8fe17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:39:23.024172Z",
-     "iopub.status.busy": "2024-05-27T02:39:23.023719Z",
-     "iopub.status.idle": "2024-05-27T02:39:23.036230Z",
-     "shell.execute_reply": "2024-05-27T02:39:23.035878Z",
-     "shell.execute_reply.started": "2024-05-27T02:39:23.024138Z"
+     "iopub.execute_input": "2024-05-27T21:52:08.855143Z",
+     "iopub.status.busy": "2024-05-27T21:52:08.854441Z",
+     "iopub.status.idle": "2024-05-27T21:52:08.868202Z",
+     "shell.execute_reply": "2024-05-27T21:52:08.867809Z",
+     "shell.execute_reply.started": "2024-05-27T21:52:08.855106Z"
     }
    },
    "outputs": [],
    "source": [
-    "obj = obj_list[0]"
+    "obj = obj_list[random.randrange(len(obj_list))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "bea6513d-6ce2-4a41-b03b-f1d1a091d0cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:39:26.239602Z",
-     "iopub.status.busy": "2024-05-27T02:39:26.239191Z",
-     "iopub.status.idle": "2024-05-27T02:39:26.252196Z",
-     "shell.execute_reply": "2024-05-27T02:39:26.251864Z",
-     "shell.execute_reply.started": "2024-05-27T02:39:26.239570Z"
+     "iopub.execute_input": "2024-05-27T21:52:09.400468Z",
+     "iopub.status.busy": "2024-05-27T21:52:09.399790Z",
+     "iopub.status.idle": "2024-05-27T21:52:09.412318Z",
+     "shell.execute_reply": "2024-05-27T21:52:09.411984Z",
+     "shell.execute_reply.started": "2024-05-27T21:52:09.400432Z"
     },
     "scrolled": true
    },
@@ -128,7 +129,7 @@
        "dict_keys(['text', 'id', 'added', 'source', 'subdomain'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,25 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "2d27d740-2276-4e92-a23d-8ff2387f1a1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-27T02:39:30.432285Z",
-     "iopub.status.busy": "2024-05-27T02:39:30.431862Z",
-     "iopub.status.idle": "2024-05-27T02:39:30.445078Z",
-     "shell.execute_reply": "2024-05-27T02:39:30.444711Z",
-     "shell.execute_reply.started": "2024-05-27T02:39:30.432253Z"
+     "iopub.execute_input": "2024-05-27T22:35:01.263534Z",
+     "iopub.status.busy": "2024-05-27T22:35:01.263060Z",
+     "iopub.status.idle": "2024-05-27T22:35:01.279587Z",
+     "shell.execute_reply": "2024-05-27T22:35:01.279259Z",
+     "shell.execute_reply.started": "2024-05-27T22:35:01.263495Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'What does the future hold for Star Wars animation?\\nIt\\'s a sad day for fans of Star Wars: The Clone Wars... from a certain point of view.\\nLucasfilm and The Clone Wars\\' supervising director, Dave Filoni, have announced that Star Wars: The Clone Wars, the television series, is over and that the fifth season that just came to an end was the final one for the show.\\nBut here\\'s where it gets complicated. More episodes of The Clone Wars have been made than what we\\'ve seen. There were in fact glimpses in the trailer for Season 5 of a storyline that ended up being held, and there have been other references made by Filoni and others, as far back as Star Wars Celebration VI last summer, indicating more stories were being produced for a presumed sixth season. In fact, when I recently spoke to Filoni for a Post-Season 5 interview, he told me, \"There are more stories to tell, and as I’ve said, we’ve been working on them for awhile.\"\\nThere won\\'t be a sixth season, but the announcement did promise, \"We\\'re continuing production on new Clone Wars story arcs that promise to be some of the most thrilling adventures ever seen. Stay tuned for more information on where fans can soon find this bonus content.\"\\nThe Clone Wars had already made a shift to four-episode arcs and it seems like the most obvious route is to release upcoming story arcs as self-contained movies, just as some of these arcs have been presented at special screenings. The only question is where they\\'ll debut - on TV (on Disney XD perhaps?), straight-to-DVD/Blu-ray or theatrically?\\nSaid Filoni in the announcement, \"The best is yet to come. We have some of the most exciting, most important story arcs still coming your way,\" going on to note, \"There are still some gaps in there. Things that are really crucial to the overall story arc of the Star Wars universe.\" He went on to promise, \"They are the best episodes that my crew has committed to screen.\"\\nThe video of Filoni announcing the end of the series (see above) is accompanied by a clip, which shows an event that makes it seem The Clone Wars is going to at last delve into one of the most crucial events in Star Wars - Order 66.\\nThe Clone Wars announcement also included the decision to delay the debut of Star Wars: Detours, the comedic animated series from Seth Green, Matthew Senreich and Todd Grimes.\\nSaid the release, \"At Star Wars Celebration VI last year, George Lucas gave fans a glimpse at the animated comedy series Star Wars Detours from Seth Green, Matthew Senreich, and Todd Grimes. Detours was conceived and produced before we decided to move forward with the new Star Wars trilogy, and in the wake of that decision, Lucasfilm has reconsidered whether launching an animated comedy prior to the launch of Episode VII makes sense. As a result, we\\'ve decided to postpone the release of Detours until a later date.\"\\nUpdate: But wait, there\\'s more! Lucasfilm also revealed a brand new, mysterious animated Star Wars project is in the works. \"We are exploring a whole new Star Wars series set in a time period previously untouched in Star Wars films or television programming. You can expect more details in the months to come.\"'"
+       "'GOGCCFLAGS=\"-fPIC -m64 -pthread -fno-caret-diagnostics -Qunused-arguments -fmessage-length=0 -fdebug-prefix-map=/tmp/go-build741696436=/tmp/go-build -gno-record-gcc-switches\"\\ngo modules downloaded and binary is built.\\nthen go install works as expected.\\nI can confirm that this is happening to me as well. It is not 100% constant. My docker builds experience it about 98% of the time.\\nA git fetch seems to fix it.\\nSame issues with go 1.11.5, 1.11.8, 1.12.3 in Docker (golang:1.12.3), and installed locally on Ubuntu.\\nReproduced locally with the same error.\\nPerhaps Gerrit is acting up again?\\nI\\'ve traced this to a sequence of Git commands that reproduces this issue outside of Go. The Gerrit team has been notified and is working to resolve the issue.\\nIs it some workaround for the problem?\\nThe latest we have from the Gerrit team is that this might be a bug specific to the content of the google.golang.org/api repository. As suggested above, a git fetch should work around it. I think fetching a different version might help too.\\nYes. Second running also helps, but it very ugly hack. I added vendor dir to my projects. It looks like better workaround.\\nHello, this is the team that manages googlesource.com. *.googlesource.com is hosted by using JGit, and we believe that there\\'s a bug in upstream JGit that cannot handle unshallow git-fetch. We recognize that this is reproducible easily, but we cannot spot the buggy code in the JGit. If there\\'s an option to do a full clone always instead of partial clone, that can be a workaround.\\nWe identified the root cause and the fix is uploaded at https://git.eclipse.org/r/c/140463/. Our in-house JGit comitters are already gone home, so this will be reviewed tomorrow at best. If everything goes well and our SREs are happy about a Friday release, we might be able to cherry-pick this fix tomorrow. The worst case ETA would be next week.\\nThat did the trick. If it happens again, we want to know.\\nStill doesnt work for me.\\nI\\'ve tried to reproduce this again, and it\\'s now working for me.\\n@chmking @mr-tron Are you able to reproduce this with a clean module cache using the original instructions at the top of the issue? Could you post the output of go install -x go.chromium.org/goma/server/cmd/remoteexec_proxy with the failure? The -x flag should show the git commands run in each vcs cache, so that will help us isolate the issue.\\n@jayconrod This is happening on our CI machines running the build in a docker without a go mod cache. It worked this morning without fail many times until it started failing at the time of my post. Now the issues is intermittent.\\nI can try to replicate it for you later.\\nIs there a workaround for go get? I am unable to develop.\\nEdit: I skipped over the workaround.\\nPlease see the first comment for the workaround.\\njayconrod\\'s case can be fixed by https://git.eclipse.org/r/c/140618/. I\\'m not sure if this covers other people\\'s cases.\\nThe Gerrit team says the fix is fully rolled out now. Please let us know if you\\'re still seeing these symptoms.\\nThe fix works for our case thanks!\\n@bcmills Issue still happens with docker build.\\nAre their new reproduction steps for the remaining failure(s)?\\nSorry that this has been a session of whack-a-mole. Shallow clones make the server operate on the truncated history that a client is holding, which is a cross-cutting concern involving many different code paths and exposing a lot of corner cases.\\nIf we can get clients to use partial clones (https://www.git-scm.com/docs/partial-clone) instead of shallow clones, where the partial clones pull down all history and tree objects, we are back to much more well worn and tested paths on the server.\\nI haven\\'t isolated the issue to a smaller reproducible step, but this is a starting point.\\nThe Dockerfile also uses the Alpine Linux image variant for Go 1.12.\\nI suspect Docker build layer caching is biting you. Disable the cache once and try again.\\nI\\'m using the latest Alpine Linux variant for Go 1.12.\\nIt doesn\\'t seem like a docker build cache issue as the build also fails in TravisCI.\\nI\\'ve included the command output with docker build --no-cache below. The error is near the bottom.\\nremote: Enumerating objects: 3942, done.\\nReceiving objects: 100% (3942/3942), 905.78 KiB | 2.41 MiB/s, done.\\nResolving deltas: 100% (2334/2334), done.\\n$ docker build --no-cache .\\nStep 7/14 : ENV DATABASES=\"postgres mysql redshift cassandra spanner cockroachdb clickhouse mongodb\"\\nStep 8/14 : ENV SOURCES=\"file go_bindata github aws_s3 google_cloud_storage gitlab\"\\nMaybe it\\'s an issue w/ the alpine linux 3.9 version of git (v2.20.1-r0)?\\nLocal builds (on Mac OS X with git 2.21.0) succeed.\\n@dhui, that all worked for me, though. Does it always fail for you, or just sometimes?\\nDoes it always fail for you, or just sometimes?\\nIt\\'s always failed for me. On TravisCI, it failed 2/2 times and when running locally in docker, it failed 5/5 times. The missing tree object varies between runs though.\\nOkay, on my second try it also fails for me.\\n@draftcode, is someone on the Gerrit side looking into this?\\nI found another bug in JGit code that made it exclude dcbf3e3c23816703a8f5ebfe6583cc3fc2793526. But after I fix that, I found another bug that doesn\\'t send a parent of v0.1.0. I\\'m debugging JGit more.\\nhttps://git.eclipse.org/r/c/140900/ and https://git.eclipse.org/r/c/140901/ will fix the the three tag unshallow case. Tried all three previously reproduced cases.\\nStill seems to be happening. Pinged internal bug.\\n#31399 (comment) is not rolled out yet.\\nOops, I thought those CLs had been deployed already.\\n@draftcode Do you expect this will fix the GOPATH=/tmp/go GO111MODULE=on go install go.chromium.org/goma/server/cmd/remoteexec_proxy command from the original example?'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
